64092--Set fixed height to slider on mobile
https://project.mediacurrent.com/slactoday/node/64092

Inconsistencies in the length of slider titles were causing issues
on mobile as the height of the title wrappers would change based on
the title length.  This was presenting UI issues.
Corrected by assigning a fixed height to the title wrapper to ensure
its background would remain consistent at the same height for all
slides.  Allowed for titles to wrap to up to 3 lines.  These changes
were reset on tablet and higher as on those devices we want the
title and teaser to expand freely.

mario h.

--- a/sites/all/themes/slac/css/main.css
+++ b/sites/all/themes/slac/css/main.css
@@ -6378,6 +6378,8 @@ body {
 }
 .jcarousel-container-horizontal .title-body {
   display: block;
+  height: 92px;
+  overflow: hidden;
   padding: 0.6rem;
   background: #ffffff;
   width: 100%;
@@ -6388,7 +6390,7 @@ body {
     font-size: 12px;
     font-size: 0.75rem;
     background: rgba(54, 116, 163, 0.75);
-    max-height: 100px;
+    height: inherit;
     color: #dfdfdf;
     line-height: 1.4;
     overflow: hidden;
